# WolfLib

./: .gitignore  .project  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  wolflib.h
src/wStream/: wStream.cpp  wStream.h
